Fix up scroll locations and also toggle navbar on selection on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   font-family: 'Oswald', sans-serif;
 }
 
+.content {
+  margin-top: 40px;
+}
+
 #root {
   height: 100%;
 }
